tests/neg-custom-args/captures/capt-wf2.scala
class C extends caps.Capability

def test(c: C) =
  var x: Any^{c} = ???
  val y: Any^{x} = x  // error
